--- a/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
@@ -105,19 +105,16 @@ spec:
         existingClaim: *app
         globalMounts:
           - path: /config
-      logs:
+      tmpfs:
         type: emptyDir
-        globalMounts:
-          - path: /config/logs
-      tts:
-        type: emptyDir
-        globalMounts:
-          - path: /config/tts
-      tmp:
-        type: emptyDir
-        globalMounts:
-          - path: /tmp
-      venv:
-        type: emptyDir
-        globalMounts:
-          - path: /config/.venv
+        advancedMounts:
+          home-assistant:
+            app:
+              - path: /config/.venv
+                subPath: .venv
+              - path: /config/logs
+                subPath: logs
+              - path: /config/tts
+                subPath: tts
+              - path: /tmp
+                subPath: tmp
