--- a/kubernetes/apps/base/downloads/recyclarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/recyclarr/helmrelease.yaml
@@ -52,7 +52,14 @@ spec:
           - path: /config/recyclarr.yml
             subPath: recyclarr.yml
             readOnly: true
-      config-logs:
+      tmpfs:
         type: emptyDir
-        globalMounts:
-          - path: /config/logs
+        advancedMounts:
+          recyclarr:
+            app:
+              - path: /config/logs
+                subPath: logs
+              - path: /config/repositories
+                subPath: repositories
+              - path: /tmp
+                subPath: tmp
