--- a/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
@@ -82,9 +82,12 @@ spec:
         existingClaim: jellyseerr-cache
         globalMounts:
           - path: /app/config/cache
-      logs:
+      tmpfs:
         type: emptyDir
-        globalMounts:
-          - path: /app/config/logs
-      tmp:
-        type: emptyDir
+        advancedMounts:
+          jellyseerr:
+            app:
+              - path: /app/config/logs
+                subPath: logs
+              - path: /tmp
+                subPath: tmp
