--- a/kubernetes/apps/base/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/app/helmrelease.yaml
@@ -111,14 +111,6 @@ spec:
         existingClaim: plex-cache
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server/Cache
-      logs:
-        type: emptyDir
-        globalMounts:
-          - path: /config/Library/Application Support/Plex Media Server/Logs
-      tmp:
-        type: emptyDir
-      transcode:
-        type: emptyDir
       media:
         type: nfs
         server: voyager.internal
@@ -126,4 +118,15 @@ spec:
         globalMounts:
           - path: /data
             subPath: media
-            # readOnly: true
+            readOnly: true
+      tmpfs:
+        type: emptyDir
+        advancedMounts:
+          plex:
+            app:
+              - path: /config/Library/Application Support/Plex Media Server/Logs
+                subPath: logs
+              - path: /transcode
+                subPath: transcode
+              - path: /tmp
+                subPath: tmp
