--- a/kubernetes/apps/base/media/plex/kometa/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/kometa/helmrelease.yaml
@@ -73,7 +73,10 @@ spec:
           - path: /config/config.yml
             subPath: config.yml
             readOnly: true
-      logs:
+      tmpfs:
         type: emptyDir
-        globalMounts:
-          - path: /config/logs
+        advancedMounts:
+          kometa:
+            app:
+              - path: /config/logs
+                subPath: logs
