--- a/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
@@ -23,6 +23,13 @@ spec:
           postgres: "true"
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          nfs-probe:
+            image:
+              repository: public.ecr.aws/docker/library/busybox
+              tag: 1.37.0@sha256:f64ff79725d0070955b368a4ef8dc729bd8f3d8667823904adcb299fe58fc3da
+            args: ["/bin/sh", "-c", "while true; do nc -z voyager.internal 2049; sleep 10; done"]
+            restartPolicy: Always
         containers:
           app:
             image:
