feat: add addons

--- a/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
@@ -132,6 +132,8 @@ spec:
         advancedMounts:
           bazarr:
             app:
+              - path: /add-ons
+                subPath: add-ons
               - path: /config/cache
                 subPath: cache
               - path: /config/log
