chore: move more dashboards

--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -22,6 +22,8 @@ cni:
   exclusive: false
 dashboards:
   enabled: true
+  annotations:
+      grafana_folder: Network
 devices: en+
 # enableIPv4BIGTCP: true
 endpointRoutes:
