feat: update webhook url

--- a/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/rss-forwarder/externalsecret.yaml
@@ -13,36 +13,36 @@ spec:
     template:
       data:
         config.toml: |-
-            [feeds.home-operations-containers]
-            url = "https://github.com/home-operations/containers/commits/main/.atom"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .INFRA_DISCORD_WEBHOOK }}"
-            [feeds.leadedsolder]
-            url = "https://www.leadedsolder.com/feed.xml"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
-            [feeds.sss]
-            url = "https://seatsafetyswitch.com/rss"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
-            [feeds.carsmakeyoustupid]
-            url = "https://carsmakeyoustupid.tumblr.com/rss"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
-            [feeds.plasmadash]
-            url = "https://plasmadash.com/feed.xml"
-            interval = "10m"
-            retry_limit = 5
-            sink.type = "discord"
-            sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+          [feeds.home-operations-containers]
+          url = "https://github.com/home-operations/containers/commits/main/.atom"
+          interval = "10m"
+          retry_limit = 5
+          sink.type = "discord"
+          sink.url = "{{ .GH_DISCORD_WEBHOOK }}"
+          [feeds.leadedsolder]
+          url = "https://www.leadedsolder.com/feed.xml"
+          interval = "10m"
+          retry_limit = 5
+          sink.type = "discord"
+          sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+          [feeds.sss]
+          url = "https://seatsafetyswitch.com/rss"
+          interval = "10m"
+          retry_limit = 5
+          sink.type = "discord"
+          sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+          [feeds.carsmakeyoustupid]
+          url = "https://carsmakeyoustupid.tumblr.com/rss"
+          interval = "10m"
+          retry_limit = 5
+          sink.type = "discord"
+          sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
+          [feeds.plasmadash]
+          url = "https://plasmadash.com/feed.xml"
+          interval = "10m"
+          retry_limit = 5
+          sink.type = "discord"
+          sink.url = "{{ .MM_DISCORD_WEBHOOK }}"
   dataFrom:
-  - extract:
-      key: discord
+    - extract:
+        key: discord
